# audiosync

./: .gitignore  AudioSync Pro.spec  AudioSync.js  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  PLAN.md  README.md  build_app.sh  build_linux.sh  build_windows.bat  index.html  main.py  package-lock.json  package.json  requirements.txt  version.py  vite.config.js
.github/workflows/: ci.yml  deploy.yml  pages.yml  release.yml
app/: dialogs.py  main_window.py  theme.py  track_card.py  track_panel.py  waveform_view.py  workflow_bar.py
audiosync-cli/: Cargo.toml
audiosync-cli/src/: main.rs
audiosync-cli/tests/: cli_test.rs
audiosync-core/: Cargo.toml
audiosync-core/src/: audio_io.rs  cloud.rs  engine.rs  grouping.rs  lib.rs  metadata.rs  models.rs  project_io.rs  timeline_export.rs
core/: __init__.py  audio_io.py  cloud.py  engine.py  models.py  timeline_export.py
python/: README.md  build_app.sh  cli.py  main.py  requirements.txt  version.py
python/app/: dialogs.py  track_card.py  track_panel.py  workflow_bar.py
python/core/: __init__.py  audio_io.py  grouping.py  metadata.py  models.py  project_io.py
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs
src/components/: AboutDialog.vue  CloudProjectsDialog.vue  DriftFixDialog.vue  ExportDialog.vue  LoginDialog.vue  MainLayout.vue  ProcessingDialog.vue  ResizeSplitter.vue  ShareDialog.vue  ToastNotification.vue  TrackCard.vue  TrackPanel.vue  WaveformCanvas.vue  WorkflowBar.vue
src/composables/: useAudioSync.js  useAuth.js  useCloud.js  useToast.js
src/styles/: animations.css  main.css
website/: index.html  robots.txt  sitemap.xml  style.css
website/v2/: index.html
