[package]
name = "audiosync-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AudioSync Pro CLI — headless audio/video synchronization for servers and pipelines"

[[bin]]
name = "audiosync"
path = "src/main.rs"

[dependencies]
audiosync-core = { path = "../audiosync-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
serde_json = "1"
