[package]
name = "audiosync-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AudioSync Pro desktop application"

[lib]
name = "audiosync_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "audiosync-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
audiosync-core = { path = "../audiosync-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.11"
open = "5"
